--- a/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/user.adoc
+++ b/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/user.adoc
@@ -1,9 +1,9 @@
-=== 회원 관련 API
+== 회원 관련 API
 
 === 회원가입
 
-operation::user-login-test/sign-up-test[snippets='http-request,request-fields,http-response,response-fields']
+operation::user-sign-up-test/user-sign-up-test[snippets='http-request,request-fields,http-response,response-fields']
 
 === 회원 정보 수정
 
-operation::user-login-test/user-modify-test[snippets='http-request,request-fields,http-response,response-fields']
+operation::user-my-page-test/user-modify-test[snippets='http-request,request-headers,request-fields,http-response,response-fields']
