feat: 코드 디렉토리 일부 변경 - 일부 패키지 분할 하여 생성

--- a/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/index.adoc
+++ b/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/index.adoc
@@ -6,8 +6,10 @@
 :seclinks:
 
 
+include::{docfile}/../userPage.adoc[]
+
+include::{docfile}/../csPage.adoc[]
+
+include::{docfile}/../followPage.adoc[]
+
 include::{docfile}/../mainRecRoomList.adoc[]
-
-include::{docfile}/../user.adoc[]
-
-include::{docfile}/../userMyPage.adoc[]
