--- a/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/index.adoc
+++ b/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/index.adoc
@@ -17,3 +17,5 @@ include::{docfile}/../followPage.adoc[]
 include::{docfile}/../room.adoc[]
 
 include::{docfile}/../mainRecRoomList.adoc[]
+
+include::{docfile}/../category.adoc[]
