--- a/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/userPage.adoc
+++ b/tp-back-app/application/tp-back-internal-app/src/docs/asciidoc/userPage.adoc
@@ -1,5 +1,9 @@
 == 회원 관련 API
 
+=== 유저 이메일 중복 체크
+
+operation::user-my-page-web-test/user-email-valid[snippets='http-request,query-parameters,http-response,response-fields']
+
 === 회원 가입
 
 operation::user-sign-up-web-test/user-sign-up-test[snippets='http-request,request-fields,http-response,response-fields']
